--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --contacts-color-secondary: #f4f4fd;
   --background-section-color: #2e2f42;
   --header-background: #e7e9fc;
+  --customers-color: #8e8f99;
 }
 ul,
 ol {
@@ -158,9 +159,16 @@ address {
 /* hero */
 
 .hero {
-  background: var(--background-section-color);
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-image.jpg);
+  background-size: cover;
+  background-position: center;
+  min-width: 1440px;
 }
 
 .hero-title {
@@ -200,6 +208,7 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  margin-top: 8px;
 }
 .about-info {
   font-weight: 400;
@@ -271,6 +280,65 @@ address {
   justify-content: space-between;
   gap: 24px;
 }
+.team-media-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+.team-media-list-link {
+  background-color: var(--brand-color);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-media-list-link:hover,
+.team-media-list-link:focus {
+  background-color: var(--accent-color);
+}
+
+.team-media-list-icon {
+  fill: var(--contacts-color-secondary);
+}
+
+/* customers */
+
+.customers {
+  padding: 120px 0;
+}
+.customers-title {
+  margin-bottom: 72px;
+}
+.customers-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.customers-list-item {
+  width: 168px;
+  height: 88px;
+  border: 1px solid var(--customers-color);
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.customers-list-icon {
+  fill: var(--customers-color);
+}
+.customers-list-item:hover,
+.customers-list-item:focus {
+  border: 1px solid var(--accent-color);
+}
+.customers-list-icon:hover,
+.customers-list-icon:focus {
+  fill: var(--accent-color);
+}
 
 /* footer */
 .footer-text {
@@ -289,4 +357,39 @@ address {
 .footer-logo {
   color: var(--contacts-color-secondary);
   margin-bottom: 16px;
+}
+.footer-social {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--third-color);
+  margin-bottom: 16px;
+}
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+}
+.footer-left {
+  margin-right: 120px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: #31d0aa;
+}
+.footer-list-icon {
+  fill: var(--contacts-color-secondary);
 }
