--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -217,18 +217,17 @@ header {
   padding-bottom: 32px;
   padding-left: 16px;
   padding-right: auto;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.examples-info:hover,
-.examples-info:focus {
+.example-link {
+  display: block;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.example-link:hover,
+.example-link:focus {
   cursor: pointer;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.examples-image {
-  margin-bottom: 0;
 }
 
 /* footer */
